Update FFM implementation to use Java 21 API
- Changed from jdk.incubator.foreign (Java 17) to java.lang.foreign (Java 21)
- Updated SpawnerNativeInterface to use Java 21 FFM API (Linker, Arena, SymbolLookup)
- Updated MANIFEST.MF to require JavaSE-21
- Added --enable-preview flag to pom.xml for FFM API
- Fixed API usage: ResourceScope->Arena, CLinker->Linker, MemoryAddress removed
- Improved memory operations with MemorySegment.copy()

Co-authored-by: laeubi <1331477+laeubi@users.noreply.github.com>